--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,6 +31,10 @@ spring:
     serialization:
       fail-on-empty-beans: 'false'
 
+# 서비스할 때 절대 노출되면 안됨.
+cos:
+  key: cos0111
+
 
 #server:
 #  port: 8080
